# EchoRadar

./: .gitignore  CMakeLists.txt  DEVELOPER_SETUP.md  README.md  imgui.ini
docs/: milestone5_gunshot_detector.md  milestone6_dataset_pipeline.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  EchoRadarApp.cpp  EchoRadarApp.h  echo_sandbox.cpp  main.cpp
src/audio/: AudioCapture.cpp  AudioCapture.h  AudioDeviceInfo.h  AudioDeviceManager.cpp  AudioDeviceManager.h  AudioHistoryBuffer.cpp  AudioHistoryBuffer.h  AudioRingBuffer.cpp  AudioRingBuffer.h  CMakeLists.txt  miniaudio_impl.cpp
src/common/: Types.h
src/dataset/: CMakeLists.txt  DatasetJson.h  DatasetManager.cpp  DatasetManager.h  DatasetTypes.h  DatasetWavStats.h
src/detector/: CMakeLists.txt  GunshotEvent.h  GunshotEventDetector.cpp  GunshotEventDetector.h
src/dsp/: CMakeLists.txt  RingBuffer.cpp  RingBuffer.h  STFTProcessor.cpp  STFTProcessor.h  WindowFunctions.cpp  WindowFunctions.h
src/events/: CMakeLists.txt  FootstepDetector.cpp  FootstepDetector.h  GunshotDetector.cpp  GunshotDetector.h
src/features/: CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.h  FeatureHistoryBuffer.cpp  FeatureHistoryBuffer.h
src/localization/: CMakeLists.txt  KNNDirectionEstimator.cpp  KNNDirectionEstimator.h
src/overlay/: CMakeLists.txt  OverlayRenderer.cpp  OverlayRenderer.h
src/tracking/: CMakeLists.txt  DirectionTracker.cpp  DirectionTracker.h
tests/: CMakeLists.txt  test_audio_history_buffer.cpp  test_audio_ring_buffer.cpp  test_dataset_manager.cpp  test_detectors.cpp  test_feature_history_buffer.cpp  test_features.cpp  test_gunshot_event_detector.cpp  test_localization.cpp  test_ring_buffer.cpp  test_stft.cpp  test_tracking.cpp
tools/: CMakeLists.txt
tools/audio_monitor/: CMakeLists.txt  main.cpp
tools/dataset_recorder/: CMakeLists.txt  main.cpp
tools/feature_monitor/: CMakeLists.txt  main.cpp
tools/gunshot_monitor/: CMakeLists.txt  main.cpp
tools/gunshot_visualizer/: CMakeLists.txt  DatasetStudioPanel.cpp  DatasetStudioPanel.h  main.cpp
tools/stft_monitor/: CMakeLists.txt  main.cpp
